packages/server/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
  labels:
    k8s-app: graphql
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: graphql
  template:
    metadata:
      labels:
        k8s-app: graphql
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port:   '9145'
    spec:
      imagePullSecrets:
       - name: regcred
      containers:
        - name: graphql
          image: 176395444877.dkr.ecr.us-east-1.amazonaws.com/chorusone/graphql:latest
          command: [ "/usr/src/app/entrypoint.sh" ]
          args: [ "node", "build/src/server.js" ]
          imagePullPolicy: Always
        - name: nginx
          image: 176395444877.dkr.ecr.us-east-1.amazonaws.com/chorusone/nginx:latest
          ports:
            - containerPort: 8001
            - containerPort: 9145
      serviceAccountName: graphql-vault
